<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mp_root_instruction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mp_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/mp_text_container"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="?attr/actionBarSize"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/mp_instruction_title"
        style="@style/TextAppearance.MP.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="@dimen/rsb_padding_medium"
        android:textColor="@color/appTextDark" />

    <LinearLayout
        android:id="@id/mp_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mp_entry_field"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/mp_instruction_text"
            style="@style/TextAppearance.MP.SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="@dimen/rsb_padding_medium"
            android:textColor="@color/appTextDark"
            android:textColorLink="?attr/colorAccent" />

        <TextView
            android:id="@+id/mp_instruction_more_detail_text"
            style="@style/TextAppearance.MP.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textColor="@color/appTextDark"
            android:textColorLink="?attr/colorAccent" />

    </LinearLayout>

    <EditText
        android:id="@+id/mp_entry_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mp_next_button_container"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        android:hint="Enter your mobile number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <FrameLayout
        android:id="@+id/mp_next_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/rsb_padding_medium"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_go_back"
                style="@style/MP.ButterScotch.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mp_rounded_button_height"
                android:layout_margin="@dimen/rsb_padding_small"
                android:focusable="true"
                android:text="@string/rsb_AX_BUTTON_BACK"
                android:textAllCaps="false"
                android:textColor="@color/rsb_black"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_go_forward"
                style="@style/MP.ButterScotch.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mp_rounded_button_height"
                android:layout_margin="@dimen/rsb_padding_small"
                android:focusable="true"
                android:text="@string/rsb_BUTTON_NEXT"
                android:textAllCaps="false"
                android:textColor="@color/rsb_black" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/internal_sign_in_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mp_text_container"
        android:gravity="center"
        android:textSize="20dp"
        android:text="Click for External ID login [TEST BUILD]"
        android:textColor="@color/rsb_red" />

</RelativeLayout>
