...

    <string name="app_name">mPower</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code">Enter Code</string>
    <string name="sms_message">SMS Message</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_history">History</string>
    <string name="title_insights">Insights</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_external_id_sign_in">Sign in</string>

    <string name="tracking_tab_title">Tracking</string>
    <string name="measuring_tab_title">Measuring</string>

    <!--Study Burst titles-->
...

    <!-- Withdraw -->
    <string name="withdraw_title">Hi %1$s,\n You have been enrolled in the mPower2 Study since %2$s</string>
    <string name="withdraw_details">You can withdraw from the study if you no longer want to be involved. Please note that you will be logged out of your account and no further data will be collected.</string>
    <string name="passive_gait_permission_title">Measure movement in the background</string>
    <string name="passive_gait_permission_description">We are studying whether it is possible to capture similar measurements while you are going about your daily life. We would like to be able to measure your walking patterns in the background.</string>
    <string name="passive_gait_permission_okay">Okay</string>
    <string name="passive_gait_permission_not_now">Not Now</string>

    <!-- Consent error handling -->
    <string name="consent_error_title">Something went wrong…</string>

    <!-- Introduction -->
    <string name="introduction_title">Welcome to mPower</string>
...
